// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AmeliproAutoCompleteField > Snapshots > renders the component with all properties filled in 1`] = `
<div
  class="
    amelipro-autocomplete
    d-flex
    flex-column
    flex-md-row
    modified-classes
  "
  id="modified-unique-id-container"
  style="
    max-width: modified-global-max-width;
    min-width: modified-global-min-width;
    width: var(--modified-global-width);
  "
>
  <div class="
    align-baseline
    amelipro-autocomplete__label-wrapper
    d-inline-flex
    mb-1
    mr-md-2
    mt-md-2
  ">
    <label
      class="
        amelipro-autocomplete__label
        mr-md-2
      "
      for="modified-unique-id"
      id="modified-unique-id-label"
      style="
        max-width: modified-label-max-width;
        min-width: modified-label-min-width;
      "
    >
      Modified label
      <span>
        <span aria-hidden="true">
          &nbsp;*
        </span>
        <span class="d-sr-only">
          &nbsp;Champ obligatoire
        </span>
      </span>
    </label>
  </div>
  <v-autocomplete-stub
    aria-expanded="false"
    aria-required="true"
    autocomplete="list"
    bg-color="ap-grey-lighten-2"
    class="
      amelipro-text-field
      pt-0
    "
    color="ap-blue-darken-1"
    density="compact"
    disabled="true"
    eager=""
    hide-details="true"
    id="modified-unique-id"
    items="[object Object],[object Object],[object Object],[object Object]"
    menu-props="[object Object]"
    modelvalue="modified-model-value"
    placeholder="Modified placeholder"
    readonly=""
    role="combobox"
    rules="() => "modified-rules",(value) => {
    let valid;
    if (Array.isArray(value)) {
      valid = value.length !== 0;
    } else if (typeof value === "string") {
      valid = value.trim() !== "";
    } else {
      valid = value !== null && value !== void 0;
    }
    return valid || __vite_ssr_import_0__.ruleMessage(errorMessages, "default");
  }"
    style="
      max-width: modified-input-max-width;
      min-width: modified-input-min-width;
      background-color: transparent;
    "
    validate-on="lazy"
    variant="outlined"
  ></v-autocomplete-stub>
</div>
`;

exports[`AmeliproAutoCompleteField > Snapshots > renders the component with only required properties filled in 1`] = `
<div
  class="
    amelipro-autocomplete
    d-flex
    flex-column
  "
  id="required-unique-id-container"
>
  <div class="
    align-baseline
    amelipro-autocomplete__label-wrapper
    d-inline-flex
    mb-1
  ">
    <label
      class="amelipro-autocomplete__label"
      for="required-unique-id"
      id="required-unique-id-label"
    >
      Required label
      <!-- v-if -->
    </label>
  </div>
  <v-autocomplete-stub
    aria-expanded="false"
    aria-required="false"
    autocomplete="list"
    bg-color="ap-white"
    class="
      amelipro-text-field
      pt-0
    "
    color="ap-blue-darken-1"
    density="compact"
    disabled="false"
    eager=""
    hide-details="false"
    id="required-unique-id"
    items=""
    menu-props="[object Object]"
    role="combobox"
    rules=""
    variant="outlined"
  ></v-autocomplete-stub>
</div>
`;
